packages/rk_pki/lib/src/native/bindings.g.dart

// GENERATED by ffigen from rust/include/rk_pki.h — do not edit.
// ignore_for_file: always_specify_types, camel_case_types, non_constant_identifier_names, unused_element, unused_field, lines_longer_than_80_chars, public_member_api_docs

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Generated bindings for the rk_pki C ABI. Do not edit by hand.
///
class RkPkiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  RkPkiBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  RkPkiBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// The ABI this library was built with. A consumer checks it first.
  int rk_pki_abi_version() {
    return _rk_pki_abi_version();
  }

  late final _rk_pki_abi_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>('rk_pki_abi_version');
  late final _rk_pki_abi_version = _rk_pki_abi_versionPtr
      .asFunction<int Function()>();

  /// The crate version. Static storage — do not free.
  ffi.Pointer<ffi.Char> rk_pki_version() {
    return _rk_pki_version();
  }

  late final _rk_pki_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'rk_pki_version',
      );
  late final _rk_pki_version = _rk_pki_versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Releases a string returned by this library. Null is allowed.
  void rk_pki_string_free(ffi.Pointer<ffi.Char> ptr) {
    return _rk_pki_string_free(ptr);
  }

  late final _rk_pki_string_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'rk_pki_string_free',
      );
  late final _rk_pki_string_free = _rk_pki_string_freePtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Opens an engine over a key store directory.
  ///
  /// `config_json`: {"storeDir":..., "installationId":..., "machineId":...,
  /// "machineKind":"till"|"shopServer"|"chainServer"|
  /// "clusterNode"|"relayClient"}
  ///
  /// Returns NULL on failure, writing a failure envelope to `*out_error` (which
  /// the caller frees). `out_error` may be NULL.
  ffi.Pointer<RkPkiEngine> rk_pki_engine_open(
    ffi.Pointer<ffi.Char> config_json,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return _rk_pki_engine_open(config_json, out_error);
  }

  late final _rk_pki_engine_openPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<RkPkiEngine> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('rk_pki_engine_open');
  late final _rk_pki_engine_open = _rk_pki_engine_openPtr
      .asFunction<
        ffi.Pointer<RkPkiEngine> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  /// Closes an engine. Null is allowed.
  void rk_pki_engine_close(ffi.Pointer<RkPkiEngine> handle) {
    return _rk_pki_engine_close(handle);
  }

  late final _rk_pki_engine_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<RkPkiEngine>)>>(
        'rk_pki_engine_close',
      );
  late final _rk_pki_engine_close = _rk_pki_engine_closePtr
      .asFunction<void Function(ffi.Pointer<RkPkiEngine>)>();

  /// Runs one named operation. Returns a JSON envelope the caller frees:
  /// {"ok":true,"value":{...}} or {"ok":false,"error":{"kind":"...", ...}}
  ffi.Pointer<ffi.Char> rk_pki_call(
    ffi.Pointer<RkPkiEngine> handle,
    ffi.Pointer<ffi.Char> op,
    ffi.Pointer<ffi.Char> request_json,
  ) {
    return _rk_pki_call(handle, op, request_json);
  }

  late final _rk_pki_callPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<RkPkiEngine>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('rk_pki_call');
  late final _rk_pki_call = _rk_pki_callPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<RkPkiEngine>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// The same, for operations that need no key store: secret.hash, secret.verify,
  /// selftest.
  ffi.Pointer<ffi.Char> rk_pki_call_stateless(
    ffi.Pointer<ffi.Char> op,
    ffi.Pointer<ffi.Char> request_json,
  ) {
    return _rk_pki_call_stateless(op, request_json);
  }

  late final _rk_pki_call_statelessPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('rk_pki_call_stateless');
  late final _rk_pki_call_stateless = _rk_pki_call_statelessPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();
}

final class RkPkiEngine extends ffi.Opaque {}
